<resources>

    <string name="app_name">Sematic Medicine</string>
    <string name="title_main_activity">Sematic Medicine</string>
    <string name="list_empty_message">There is no available data.</string>
    <string name="simple_menu_name">Simple Adapter</string>
    <string name="simple_menu_condensed">Simple</string>
    <string name="fancy_menu_name">Fancy Menu</string>
    <string name="fancy_menu_condensed">Fancy</string>
    <string name="browse_selected_menu">Browse for remedies</string>
    <string name="expand_all_menu">Expand all</string>
    <string name="collapsible_menu_enable">Enable collapsible</string>
    <string name="collapsible_menu_disable">Disable collapsible</string>
    <string name="collapse_all_menu">Collapse all</string>
    <string name="expand_menu">Expand</string>
    <string name="delete_menu">Delete</string>
    <string name="browse">BROWSE</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="perform_query">Perform query</string>
    <string name="plant_part_used">Plant part used</string>
    <string name="therapeutical_usages">Therapeutical Usages</string>
    <string name="adjuvant_usages">Adjuvant Usages</string>

</resources>