<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/context_menu_browse_selected"
        android:alphabeticShortcut="b"
        android:enabled="true"
        android:numericShortcut="1"
        android:title="@string/browse_selected_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/context_menu_expand_all"
        android:alphabeticShortcut="a"
        android:enabled="true"
        android:numericShortcut="1"
        android:title="@string/expand_all_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/context_menu_expand_item"
        android:alphabeticShortcut="e"
        android:enabled="true"
        android:numericShortcut="2"
        android:title="@string/expand_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/context_menu_collapse"
        android:alphabeticShortcut="c"
        android:enabled="true"
        android:numericShortcut="3"
        android:title="@string/collapse_all_menu"
        android:visible="true">
    </item>

</menu>