<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/expand_all_menu_item"
        android:alphabeticShortcut="e"
        android:enabled="true"
        android:numericShortcut="3"
        android:title="@string/expand_all_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/collapse_all_menu_item"
        android:alphabeticShortcut="c"
        android:enabled="true"
        android:numericShortcut="4"
        android:title="@string/collapse_all_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/collapsible_menu_item"
        android:alphabeticShortcut="c"
        android:checkable="true"
        android:checked="true"
        android:enabled="true"
        android:numericShortcut="5"
        android:title="@string/collapsible_menu_disable"
        android:visible="true">
    </item>

</menu>